# wiiarmctrl

./: CMakeLists.txt  README.md  WiiYarp+KinectYarp.bat  WiiYarp+iCubSolver.bat  iCubSim.bat  iKinCartesianSolverRightArm.bat  simCartesianControl.bat
.svn/: wc.db
Dissertation/: Logo_IST_color.eps  conclusions.tex  icubSimpleNetworkDiagram.dia  introduction.tex  main.tex  references.bib  references_bibliography.tex  relatedwork.tex  setup.tex
KinectOpenNIYarpDriver/: CMakeLists.txt  KinectCtrl.cpp  PortCtrlMod.h  main.cpp
KinectYarpPoint/: KinectHandTracker.cpp  PortCtrlMod.h
KinectYarpSkeleton/: PortCtrlMod.cpp  PortCtrlMod.h  main.cpp
Kinect_Vizzy/: CMakeLists.txt  iCubGeneric.cpp  iCubMotorCtrl.cpp  iCubMotorCtrl.h  iCubiKinCtrl.cpp  main.cpp
Kinect_iCub/: Kinect_iCub.ini  PortCtrlMod.h  iCubGeneric.cpp  iCubMotorCtrl.cpp  main.cpp
MotionPlusTest/: CMakeLists.txt  MotionPlusTestMain.cpp
OpenGLWiiDisplay/: ThreadCtrl.cpp  ThreadCtrl.h  glWindow.cpp  glWindow.h  iCubCtrl.h
Resumo/: Resumo.tcp  Resumo.tex  acronimos.tex  application.tex  conclusion.tex
RobocubInterfaceUserTest/: GuiClass.cpp  Wiimote.cpp  Wiimote.h  iCubCtrl.cpp
SkeletonOpenGLViewer/: CMakeLists.txt  GLWindow.cpp  PortCtrlMod.cpp  PortCtrlMod.h  main.cpp
TEST_WiiYarpOpenGL/: CMakeLists.txt  WiiPortCtrl.h  glWindow.cpp
TestTask/: KinectYarpHand.bat  chave.txt  edi.txt  iCubKinectHandTracker.bat  iCubKinectHandTracker.ini  iCubKinectSkeleton.ini  iCubSolver.bat  iCubWiiKinematicCtrl.ini  (+3 more)
yarp2/src/modules/wiimoteDev/: CMakeLists.txt  wiimoteController.cpp  wiimoteController.h
(+54 files in other folders)
